@@ -2395,7 +2395,7 @@
           <TD>Set a default tilting speed factor on systems that support varying the tilt 
             speed, to be applied except when tilting with a
             specific speed factor.&nbsp; See the description of speed factors for the
-            <a href="script_commands#tiltDuringRecord">tiltDuringRecord</a> command.</TD>
+            <a href="script_commands.htm#tiltDuringRecord">tiltDuringRecord</a> command.</TD>
         </TR>
         <TR VALIGN="top">
           <TD>StageMoveDelay</TD>
