@@ -26,7 +26,7 @@
       included.&nbsp; There can be points missing from the grid and the grid can have 
       ragged edges.&nbsp; This routine will incorporate into each Navigator item both the currently selected 
       multi-hole geometry and which positions to skip in that array.&nbsp; The grid of points can come from either the Hole Finder 
-      routine (run from the <A HREF="hidd_holefinderdlg.htm">Hole Finder dialog</A> or the 
+      routine (run from the <A HREF="hidd_hole_finder.htm">Hole Finder dialog</A> or the 
       'FindHoles' script command), or from the <A HREF="menu_navigator.htm#hid_navigator_addgridofpoints">Add Grid of 
               Points</A> menu command.</p>
     <p>The position used for a new item is averaged from the stage positions required 
