@@ -222,7 +222,6 @@
           <TD class="style1">&nbsp;&nbsp;&nbsp; <A href="#hid_calibration_c2factor">Set C2 Factor</A></TD>
           <TD>Set scaling factors for C2 by entering the C2 readout for all spot sizes.</TD>
         </tr>
-hid_beamspot_illuminatedarealimits
         <tr>
           <TD class="style1">&nbsp;&nbsp;&nbsp; <A href="#hid_beamspot_illuminatedarealimits">Illuminated Area Limits</A></TD>
           <TD>Finds limits of illuminated area for all spot sizes and both probe modes.</TD>
@@ -1381,7 +1380,7 @@ hid_beamspot_illuminatedarealimits
         procedure will not match values shown by the scope. First be sure that you 
         have a C2 lens readout in your MUI workspace. Then activate the command and 
         type in the value shown in the C2 readout for each spot size.</P>
-      <P><B>Illuminated Area Limits command (Calibration - 
+      <P><A name="hid_beamspot_illuminatedarealimits"></A><B>Illuminated Area Limits command (Calibration - 
         Beam &amp; Spot sub-menu)</B></P>
       <P>Use this command to calibrate the limits of the illuminated area readout from 
         the microscope at each spot size and in nanoprobe and microprobe.&nbsp; 
