@@ -3268,7 +3268,7 @@
           <TD class="scriptcommand">FindHoles [buf]</TD>
           <TD>Runs the Hole Finder routine on the image in the current buffer, or in the 
             buffer optionally specified by <b>buf</b>, using all of the
-               parameters set in the <A HREF="hidd_holefinderdlg.htm">Hole Finder dialog</A>.&nbsp; That dialog
+               parameters set in the <A HREF="hidd_hole_finder.htm">Hole Finder dialog</A>.&nbsp; That dialog
             need not be open, but the Navigator must be.
             </TD>
         </TR>
@@ -3276,7 +3276,7 @@
           <TD class="scriptcommand">MakeNavPointsAtHoles [#A] [#L] [#U] [#S] [#B]</TD>
           <TD>Makes positions found by the Hole Finder into Navigator points, using the various 
             thresholds for exclusion set in
-              the <A HREF="hidd_holefinderdlg.htm">Hole Finder dialog</A>.&nbsp; That dialog
+              the <A HREF="hidd_hole_finder.htm">Hole Finder dialog</A>.&nbsp; That dialog
             need not be open, but the Navigator must be.&nbsp; Optionally, <b>#A</b> may be entered with 0 to 2 
             to specify the arrangement of points (0 for zigzag, 1 for away from focus, 2 for divided 
             into groups, or -1 to use the layout set in the dialog); <b>#L</b> and 
@@ -3297,7 +3297,7 @@
           <TD>Combines a set of Navigator points marked for acquisition into a subset suitable for
             acquisition of a rectangular array with 'MultipleRecords', using the parameters set in the 
             <A HREF="hidd_multi_shot_setup.htm">Multiple Record Setup dialog</A>.
-            See the &nbsp; <A HREF="hidd_multicombinerdlg.htm">Multiple Hole Combiner dialog</A>
+            See the &nbsp; <A HREF="hidd_multi_combiner.htm">Multiple Hole Combiner dialog</A>
             for details and restrictions.&nbsp; Neither of those two dialogs need to be open, but the Navigator must be.
             &nbsp; Set <b>#S</b> to 0 to select points on the currently displayed image, 1 to select points 
             within the current polygon, or 2 to select points in the same group as the current point.
